fix: ensure equal spacing regarding the stepper in all enrollment dialogs

--- a/src/app/enroll/enroll-oath-dialog/enroll-oath-dialog.component.scss
+++ b/src/app/enroll/enroll-oath-dialog/enroll-oath-dialog.component.scss
@@ -10,12 +10,3 @@ app-authenticator-links {
     margin-left: 5px;
   }
 }
-
-mat-dialog-content {
-  padding-top: 24px !important;
-  // height: 600px; // to make dialog fixed height
-}
-
-h2 {
-  margin-bottom: 0;
-}
