--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -77,3 +77,8 @@ nav .active-link {
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
   }
 }
+
+.mat-horizontal-stepper-header-container {
+  //targets the stepper in the enrollment dialog
+  margin-bottom: 20px;
+}
